--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<title>
-			Мастер дента
+			Пример сайта
 		</title>
 	</head>
 	<body>
+		<h1 align="center">Добро пожаловать</h1>
 	</body>
 </html>
